docs/5.0/api/miniapp/com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md
//[miniapp](../../../index.md)/[com.rakuten.tech.mobile.miniapp.js](../index.md)/[MiniAppMessageBridge](index.md)

# MiniAppMessageBridge

[androidJvm]\
open class [MiniAppMessageBridge](index.md)

Bridge interface for communicating with mini app.

## Constructors

| | |
|---|---|
| [MiniAppMessageBridge](-mini-app-message-bridge.md) | [androidJvm]<br>fun [MiniAppMessageBridge](-mini-app-message-bridge.md)() |

## Functions

| Name | Summary |
|---|---|
| [allowScreenOrientation](allow-screen-orientation.md) | [androidJvm]<br>fun [allowScreenOrientation](allow-screen-orientation.md)(isAllowed: [Boolean](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html))<br>Allow miniapp to change screen orientation. The default setting is false. |
| [dispatchNativeEvent](dispatch-native-event.md) | [androidJvm]<br>fun [dispatchNativeEvent](dispatch-native-event.md)(eventType: [NativeEventType](../-native-event-type/index.md), value: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) = "")<br>Dispatch Native events to miniapp. |
| [getHostEnvironmentInfo](get-host-environment-info.md) | [androidJvm]<br>open fun [getHostEnvironmentInfo](get-host-environment-info.md)(onSuccess: (info: [HostEnvironmentInfo](../../com.rakuten.tech.mobile.miniapp.js.hostenvironment/-host-environment-info/index.md)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html), onError: (infoError: [HostEnvironmentInfoError](../../com.rakuten.tech.mobile.miniapp.js.hostenvironment/-host-environment-info-error/index.md)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Get environment info from host app. You can also throw an [Exception](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-exception/index.html) from this method to pass an error message to the mini app. |
| [getMauid](get-mauid.md) | [androidJvm]<br>open fun [getMauid](get-mauid.md)(onSuccess: (mauId: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html), onError: (message: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Interface that should be implemented to return alphanumeric string that uniquely identifies a device. |
| [getMessagingUniqueId](get-messaging-unique-id.md) | [androidJvm]<br>open fun [getMessagingUniqueId](get-messaging-unique-id.md)(onSuccess: (uniqueId: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html), onError: (message: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Interface that should be implemented to return alphanumeric string that uniquely identifies a device. |
| [getUniqueId](get-unique-id.md) | [androidJvm]<br>~~open~~ ~~fun~~ [~~getUniqueId~~](get-unique-id.md)~~(~~~~onSuccess~~~~:~~ (uniqueId: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)~~,~~ ~~onError~~~~:~~ (message: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)~~)~~<br>Get provided id of mini app for any purpose. |
| [miniAppShouldClose](mini-app-should-close.md) | [androidJvm]<br>fun [miniAppShouldClose](mini-app-should-close.md)(): [MiniAppCloseAlertInfo](../../com.rakuten.tech.mobile.miniapp.closealert/-mini-app-close-alert-info/index.md)?<br>provide MiniAppCloseAlertInfo to HostApp to show close alert popup. |
| [postMessage](post-message.md) | [androidJvm]<br>fun [postMessage](post-message.md)(jsonStr: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)) |
| [requestCustomPermissions](request-custom-permissions.md) | [androidJvm]<br>open fun [requestCustomPermissions](request-custom-permissions.md)(permissionsWithDescription: [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)&lt;[Pair](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)&lt;[MiniAppCustomPermissionType](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-type/index.md), [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)&gt;&gt;, callback: ([List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)&lt;[Pair](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)&lt;[MiniAppCustomPermissionType](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-type/index.md), [MiniAppCustomPermissionResult](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-result/index.md)&gt;&gt;) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Post custom permissions request. |
| [requestDevicePermission](request-device-permission.md) | [androidJvm]<br>open fun [requestDevicePermission](request-device-permission.md)(miniAppPermissionType: [MiniAppDevicePermissionType](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-device-permission-type/index.md), callback: (isGranted: [Boolean](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Post device permission request from external. |
| [setAdMobDisplayer](set-ad-mob-displayer.md) | [androidJvm]<br>fun [setAdMobDisplayer](set-ad-mob-displayer.md)(adDisplayer: MiniAppAdDisplayer)<br>Set implemented ads displayer. Can use the default provided class from sdk AdMobDisplayer. |
| [setChatBridgeDispatcher](set-chat-bridge-dispatcher.md) | [androidJvm]<br>fun [setChatBridgeDispatcher](set-chat-bridge-dispatcher.md)(bridgeDispatcher: [ChatBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.chat/-chat-bridge-dispatcher/index.md))<br>Set implemented chatBridgeDispatcher. Can use the default provided class from sdk [ChatBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.chat/-chat-bridge-dispatcher/index.md). |
| [setMiniAppFileDownloader](set-mini-app-file-downloader.md) | [androidJvm]<br>fun [setMiniAppFileDownloader](set-mini-app-file-downloader.md)(miniAppFileDownloader: [MiniAppFileDownloader](../../com.rakuten.tech.mobile.miniapp.file/-mini-app-file-downloader/index.md))<br>Set implemented file downloader. Can use the default provided class from sdk [MiniAppFileDownloaderDefault](../../com.rakuten.tech.mobile.miniapp.file/-mini-app-file-downloader-default/index.md). |
| [setUserInfoBridgeDispatcher](set-user-info-bridge-dispatcher.md) | [androidJvm]<br>fun [setUserInfoBridgeDispatcher](set-user-info-bridge-dispatcher.md)(bridgeDispatcher: [UserInfoBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.userinfo/-user-info-bridge-dispatcher/index.md))<br>Set implemented userInfoBridgeDispatcher. Can use the default provided class from sdk [UserInfoBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.userinfo/-user-info-bridge-dispatcher/index.md). |
| [shareContent](share-content.md) | [androidJvm]<br>open fun [shareContent](share-content.md)(content: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html), callback: (isSuccess: [Boolean](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html), message: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)?) -&gt; [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html))<br>Share content info ShareInfo. This info is provided by mini app. |

## Properties

| Name | Summary |
|---|---|
| [activity](activity.md) | [androidJvm]<br>lateinit var [activity](activity.md): [Activity](https://developer.android.com/reference/kotlin/android/app/Activity.html) |
